syntax = "proto3";
import "google/protobuf/wrappers.proto";
package personproto;

service PersonService {
  rpc GetPerson(PersonRequest) returns (PersonResponse) {}
  rpc GetPersons(PersonsRequest) returns (PersonsResponse) {}
}

message PersonRequest {
  int32 id = 1;
}
message PersonResponse {
  Person person = 1;
}
message PersonsRequest {
  repeated int32 id = 1;
}
message PersonsResponse {
  repeated Person people = 1;
}

message Person {
  google.protobuf.Int32Value id = 1;
  google.protobuf.StringValue firstname = 2;
  google.protobuf.StringValue lastname = 3;
  repeated google.protobuf.Int32Value houseid = 4;
}
